--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
                         <a href="play-video.html">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Easy Tutorials</p>
+                        <p>Mishan</p>
                         <p>12k Views &bull; 2 days</p>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
                         <a href="play-video.html">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Easy Tutorials</p>
+                        <p>Mishan</p>
                         <p>12k Views &bull; 2 days</p>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
                         <a href="play-video.html">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Easy Tutorials</p>
+                        <p>Mishan</p>
                         <p>12k Views &bull; 2 days</p>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
                         <a href="play-video.html">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Easy Tutorials</p>
+                        <p>Mishan</p>
                         <p>12k Views &bull; 2 days</p>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
                         <a href="play-video.html">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Easy Tutorials</p>
+                        <p>Mishan</p>
                         <p>12k Views &bull; 2 days</p>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
                         <a href="play-video.html">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Easy Tutorials</p>
+                        <p>Mishan</p>
                         <p>12k Views &bull; 2 days</p>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
                         <a href="play-video.html">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Easy Tutorials</p>
+                        <p>Mishan</p>
                         <p>12k Views &bull; 2 days</p>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
                         <a href="play-video.html">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Easy Tutorials</p>
+                        <p>Mishan</p>
                         <p>12k Views &bull; 2 days</p>
                     </div>
                 </div>
