--- a/play-video.html
+++ b/play-video.html
@@ -57,7 +57,7 @@
                 <div class="publisher">
                     <img src="images/Jack.png" alt="">
                     <div>
-                        <p>Easy Tutorials</p>
+                        <p>Mishan</p>
                         <span>500k Subscribers</span>
                     </div>
                     <button type="button">Subscribe</button>
@@ -113,7 +113,7 @@
                     <a href="" class="small-thumbnail"><img src="images/thumbnail1.png" alt=""></a> 
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer </a>
-                        <p>Easy Tutorials</p>
+                        <p>Mishan</p>
                         <p>14k Views</p>
                     </div>
                 </div>
@@ -121,7 +121,7 @@
                     <a href="" class="small-thumbnail"><img src="images/thumbnail2.png" alt=""></a> 
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer </a>
-                        <p>Easy Tutorials</p>
+                        <p>Mishan</p>
                         <p>14k Views</p>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                     <a href="" class="small-thumbnail"><img src="images/thumbnail3.png" alt=""></a> 
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer </a>
-                        <p>Easy Tutorials</p>
+                        <p>Mishan</p>
                         <p>14k Views</p>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                     <a href="" class="small-thumbnail"><img src="images/thumbnail4.png" alt=""></a> 
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer </a>
-                        <p>Easy Tutorials</p>
+                        <p>Mishan</p>
                         <p>14k Views</p>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                     <a href="" class="small-thumbnail"><img src="images/thumbnail5.png" alt=""></a> 
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer </a>
-                        <p>Easy Tutorials</p>
+                        <p>Mishan</p>
                         <p>14k Views</p>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
                     <a href="" class="small-thumbnail"><img src="images/thumbnail6.png" alt=""></a> 
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer </a>
-                        <p>Easy Tutorials</p>
+                        <p>Mishan</p>
                         <p>14k Views</p>
                     </div>
                 </div>
@@ -161,7 +161,7 @@
                     <a href="" class="small-thumbnail"><img src="images/thumbnail7.png" alt=""></a> 
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer </a>
-                        <p>Easy Tutorials</p>
+                        <p>Mishan</p>
                         <p>14k Views</p>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                     <a href="" class="small-thumbnail"><img src="images/thumbnail8.png" alt=""></a> 
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer </a>
-                        <p>Easy Tutorials</p>
+                        <p>Mishan</p>
                         <p>14k Views</p>
                     </div>
                 </div>
@@ -177,7 +177,7 @@
                     <a href="" class="small-thumbnail"><img src="images/thumbnail1.png" alt=""></a> 
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer </a>
-                        <p>Easy Tutorials</p>
+                        <p>Mishan</p>
                         <p>14k Views</p>
                     </div>
                 </div>
